# nomad-training-resources

./: .cruft.json  LICENSE  MANIFEST.in  README.md  mkdocs.yml  move_template_files.sh  pyproject.toml
.github/workflows/: actions.yml  mkdocs-deploy.yml
docs/: index.md
src/nomad_training_resources/apps/: __init__.py
src/nomad_training_resources/normalizers/: __init__.py  normalizer.py
src/nomad_training_resources/parsers/: __init__.py  jsonld_parser.py  parser.py
src/nomad_training_resources/schema_packages/: __init__.py  schema_package.py
tests/apps/: test_app.py
tests/data/: test.archive.yaml
tests/parsers/: test_parser.py
tests/schema_packages/: test_relations.py  test_schema_package.py
